updated vimeo links to old embed code
trying to speed up load time and limit weird server callbacks

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </ul>
         </span>
       </header>
-      <a href="#work" class="jumplink pic"> <span class="jumplink arrow icon icon-right"><span>See my work</span></span> <img src="images/me.jpg" alt="" /> </a> 
+      <a href="#work" class="jumplink pic"> <span class="jumplink arrow icon icon-chevron-right"><span>See my work</span></span> <img src="images/me.jpg" alt="" /> </a> 
     </article>
     <!-- Work; this is where you'll put all your portfolio stuff -->
     <article id="work" class="panel">
@@ -77,17 +77,21 @@
           <div class="8u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe src="http://player.vimeo.com/video/23852773?portrait=0" width="520" height="400" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                </a>
+                <object width="520" height="390"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=23852773&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=23852773&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="520" height="390"></embed></object>
+              </a>
                 <div> Designed and animated in one month, a story of bears and parenthood </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe src="http://player.vimeo.com/video/23077337?portrait=0" width="250" height="190" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                  <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
+                </a>
+                <div> The butterfly from "Unbearable" </div>
+              </div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                  <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
                 </a>
                 <div> The butterfly from "Unbearable" </div>
               </div>
@@ -116,8 +120,8 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe src="http://player.vimeo.com/video/37167149?title=0&amp;byline=0&amp;portrait=0" width="250" height="190" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                </a>
+                <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
+              </a>
                 <div> This model was created procedurally from motion capture data, taken while I was Yo-yo-ing. </div>
               </div>
             </div>
@@ -133,7 +137,7 @@
             </div>
           <div class="8u">
             <div class="accordion"> <a class="dropdown" href="#">
-              <iframe src="http://player.vimeo.com/video/16282639?title=0&amp;byline=0&amp;portrait=0" width="520" height="400" frameborder="0"  webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+              <object width="520" height="391"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=16282639&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=16282639&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="520" height="391"></embed></object>
               </a>
               <div> Assignment to recreate a movie intro using After Effects. I chose Pocahontas. </div>
             </div>
@@ -240,7 +244,7 @@
           <div class="8u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe src="http://player.vimeo.com/video/17346698?portrait=0" width="520" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                <object width="520" height="293"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="520" height="293"></embed></object>
                 </a>
                 <div> Environment Design: Rocco's sketchy pizza parlor</div>
               </div>
@@ -255,11 +259,19 @@
                 <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then play an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
               </div>
             </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
           </div>
         </div>
       </section>
-      <h4>Applet <span style="font-weight:normal;"> </h4>
-      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>
+    <!--  <h4>Applet <span style="font-weight:normal;"> </h4>
+      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe> -->
     </article>
     <!-- Email -->
     <article id="contact" class="panel">
