--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe width="250" height="190" src="http://www.youtube.com/embed/CcSOJ2OBBoU" frameborder="0" allowfullscreen></iframe>
+                <object width="250" height="188"><param name="movie" value="//www.youtube.com/v/CcSOJ2OBBoU?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/CcSOJ2OBBoU?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="188" allowscriptaccess="always" allowfullscreen="true"></embed></object>
                 </a>
                 <div> Animation for "Feed your Alien" game </div>
               </div>
@@ -111,8 +111,8 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <iframe width="250" height="190" src="http://www.youtube.com/embed/kEfXTwa3n9E" frameborder="0" allowfullscreen></iframe>
-                </a>
+                <object width="250" height="188"><param name="movie" value="//www.youtube.com/v/kEfXTwa3n9E?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/kEfXTwa3n9E?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="188" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+              </a>
                 <div> (Offensive Language) Kinetic Typography, Audio from "Pulp Fiction" </div>
               </div>
             </div>
@@ -130,9 +130,7 @@
         <div class="row">
           <div class="4u">
             <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg" target="_blank"> <img type="image/jpeg" src="images/remote-thumb.jpg" width="250" height="400"> </a> 
-                <div>
-                "Fancy Remote" Modeled in Rhino </div>
-            
+                <div> "Fancy Remote" Modeled in Rhino </div>
             </div>
             </div>
           <div class="8u">
@@ -259,19 +257,11 @@
                 <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then play an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
               </div>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
           </div>
         </div>
       </section>
-    <!--  <h4>Applet <span style="font-weight:normal;"> </h4>
-      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe> -->
+      <h4>Applet <span style="font-weight:normal;"> </h4>
+      <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>
     </article>
     <!-- Email -->
     <article id="contact" class="panel">
