added more graphics

--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
                 <div> The butterfly from "Unbearable" </div>
               </div>
               <div class="accordion"> <a class="dropdown" href="#">
-                  <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=23077337&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
-                </a>
-                <div> The butterfly from "Unbearable" </div>
+                  <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
+              </a>
+                <div> This model was created procedurally from motion capture data, taken while I was Yo-yo-ing. </div>
               </div>
             </div>
           </div>
         </div>
+    <!-- SECOND ROW -->
         <div class="row">
           <div class="4u">
             <div>
@@ -120,13 +121,13 @@
           <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <object width="250" height="188"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=37167149&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=0&amp;show_byline=0&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="250" height="188"></embed></object>
-              </a>
-                <div> This model was created procedurally from motion capture data, taken while I was Yo-yo-ing. </div>
+                <a href = "images/mystery.jpg" target="_blank"><img type="image/jpeg" src="images/mystery-thumb.jpg" width="250" height="190"> </a>
+                <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then play an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
               </div>
             </div>
           </div>
         </div>
+    <!-- THIRD ROW -->
         <div class="row">
           <div class="4u">
             <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/remote.jpg" target="_blank"> <img type="image/jpeg" src="images/remote-thumb.jpg" width="250" height="400"> </a> 
@@ -141,125 +142,145 @@
             </div>
           </div>
         </div>
-        <!---4th row -->
+    <!-- FOURTH ROW -->
         <div class="row">
-          <div class="4u">
+          <div class="16u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/brush.jpg" target="_blank"><img type="image/jpeg" src="images/brush-thumb.jpg" width="250" height="340"> </a>
-                <div> Modeled in Rhino, textured in KeyShot </div>
-              </div>
-            </div>
-          </div>
-          <div class="4u">
-            <div>
-              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/chairs.jpg" target="_blank"> <img type="image/jpeg" src="images/chairs-thumb.jpg" width="250" height="340"> </a>
-                <div> Modeled in Rhino, textured in KeyShot </div>
-              </div>
-            </div>
-          </div>
-          <div class="4u">
-            <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/rings.jpg" target="_blank"><img type="image/jpeg" src="images/rings-thumb.jpg" width="250" height="340"> </a>
-                <div> Modeling and shader network created in Maya</div>
+              <div class="accordion"> <a class="dropdown" href="#"><center>
+                <object width="750" height="423"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="750" height="423"></embed></object></center>
+              </a>
+                <div> Environment Design: Rocco's sketchy pizza parlor</div>
               </div>
             </div>
           </div>
         </div>
-        <!---5th row -->
+    <!-- FIFTH ROW -->
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/dollhouse.jpg" target="_blank"><img type="image/jpeg" src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#"> 
+                <a href = "images/lightwave_dropping_into_the_spectrum.jpg" target="_blank"><img type="image/jpeg" src="images/lightwave_dropping_into_the_spectrum-thumb.jpg" width="250" height="190"> </a>
+                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirrors via motion capture to learn about light physics. 
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/mirror.jpg" target="_blank"><img type="image/jpeg" src="images/mirror-thumb.jpg" width="250" height="190"> </a>
+                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirrors via motion capture to learn about light physics. 
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/lightwave_matching_the_spectrum.jpg" target="_blank"><img type="image/jpeg" src="images/lightwave_matching_the_spectrum-thumb.jpg" width="250" height="190"> </a>
+                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirrors via motion capture to learn about light physics. 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    <!-- SIXTH ROW -->
+        <div class="row">
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/dollhouse.jpg" target="_blank"><img type="image/jpeg" src="images/dollhouse-thumb.jpg" width="250" height="190"> </a>
                 <div> Interactive dollhouse made from lasercut acrylic. House would light up based on Arduino sensory input</div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"><a href = "images/fence.jpg" target="_blank"> <img type="image/jpeg" src="images/fence-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/fence.jpg" target="_blank"> <img type="image/jpeg" src="images/fence-thumb.jpg" width="250" height="190"> </a>
                 <div> Dollhouse fences (see left). Lasercut acrylic. Model taken from a LIDAR 3D scan of a campus building and converted to 3D mesh </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/exoegg.jpg" target="_blank"><img type="image/jpeg" src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/exoegg.jpg" target="_blank"><img type="image/jpeg" src="images/exoegg-thumb.jpg" width="250" height="190"> </a>
                 <div> 3D printed sculpture. Designed in Rhino, hollow. Displayed at Tempe History Museum in 2012</div>
               </div>
             </div>
           </div>
         </div>
-        <!---6th row -->
+    <!-- SEVENTH ROW -->
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/elf.jpg" target="_blank"><img type="image/jpeg" src="images/elf-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/elf.jpg" target="_blank"><img type="image/jpeg" src="images/elf-thumb.jpg" width="250" height="190"> </a>
                 <div> Elf head, modeled in Maya. Custom shader </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/headphones.jpg" target="_blank"><img type="image/jpeg" src="images/headphones-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/headphones.jpg" target="_blank"><img type="image/jpeg" src="images/headphones-thumb.jpg" width="250" height="190"> </a>
                 <div> Modeled in Rhino, textured in KeyShot, post in Photoshop </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/bed.jpg" target="_blank"><img type="image/jpeg" src="images/bed-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/bed.jpg" target="_blank"><img type="image/jpeg" src="images/bed-thumb.jpg" width="250" height="190"> </a>
                 <div> "Dream Vortex". Lasercut masonite. Model in Rhino converted to connected 2D planes. Glows in the dark!</div>
               </div>
             </div>
           </div>
         </div>
-        <!--7th row -->
+    <!-- EIGHTH ROW -->
         <div class="row">
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/house.jpg" target="_blank"><img type="image/jpeg" src="images/house-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/house.jpg" target="_blank"><img type="image/jpeg" src="images/house-thumb.jpg" width="250" height="190"> </a>
                 <div> 3D house, inserted into background image in post. Maya, Photoshop </div>
               </div>
             </div>
           </div>
           <div class="4u">
+          <br><br><br>
+          </div>
+          <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mage.jpg" target="_blank"><img type="image/jpeg" src="images/mage-thumb.jpg" width="250" height="190"> </a>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/mage.jpg" target="_blank"><img type="image/jpeg" src="images/mage-thumb.jpg" width="250" height="190"> </a>
                 <div> Graphic and logo I created for Men Advocating Gender Equality, a social justice group. </div>
               </div>
             </div>
           </div>
-          <div class="4u">
-            <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/sun.jpg" target="_blank"><img type="image/jpeg" src="images/sun-thumb.jpg" width="250" height="190"> </a>
-                <div> Images I created for a ham radio magazine article on the ionosphere. Top graphic located in March of 2013 ed of QRP Quarterly, pp 17-18. </div>
-              </div>
-            </div>
-          </div>
         </div>
-        <!--8th row -->
+    <!-- NINTH ROW -->
         <div class="row">
-          <div class="8u">
+          <div class="4u">
             <div>
               <div class="accordion"> <a class="dropdown" href="#">
-                <object width="520" height="293"><param name="allowfullscreen" value="true" /><param name="allowscriptaccess" value="always" /><param name="movie" value="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" /><embed src="http://vimeo.com/moogaloop.swf?clip_id=17346698&amp;force_embed=1&amp;server=vimeo.com&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef&amp;fullscreen=1&amp;autoplay=0&amp;loop=0" type="application/x-shockwave-flash" allowfullscreen="true" allowscriptaccess="always" width="520" height="293"></embed></object>
-                </a>
-                <div> Environment Design: Rocco's sketchy pizza parlor</div>
+                <a href = "images/sun.jpg" target="_blank"><img type="image/jpeg" src="images/sun-thumb.jpg" width="250" height="190"> </a>
+                <div> Images I created for a first ham radio magazine article on the ionosphere. Top graphic located in March of 2013 ed of QRP Quarterly, pp 17-18. </div>
               </div>
             </div>
           </div>
           <div class="4u">
             <div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mirror.jpg" target="_blank"><img type="image/jpeg" src="images/mirror-thumb.jpg" width="250" height="190"> </a>
-                <div> Light and Mirrors game. Interactive game projected onto the floor. Students can move mirrors via motion capture to learn about light physics. </div>
-                </a></div>
-              <div class="accordion"> <a class="dropdown" href="#"> <a href = "images/mystery.jpg" target="_blank"><img type="image/jpeg" src="images/mystery-thumb.jpg" width="250" height="190"> </a>
-                <div> Interactive Murdery Mystery. Objects in the scene could be scanned into the computer, which then play an animation from that item's past as clues to solve the murder! Click here to see more about the project (under construction) </div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/waveInterferenceBaseball.jpg" target="_blank"><img type="image/jpeg" src="images/waveInterferenceBaseball-thumb.jpg" width="520" height="190"> </a>
+                <div> Image I created for a second ham radio magazine article on the ionosphere. Graphic will be located in Fall of 2013 ed of QRP Quarterly </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+    <!-- END ROWS -->
       <h4>Applet <span style="font-weight:normal;"> </h4>
       <iframe width = "357" height= "520" frameborder="0" seamless marginheight="0" marginwidth="0" scrolling="no" src="/assign4Inherit/applet/index.html"></iframe>
     </article>
