switched to iframe for centipede

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                       </div>
 
                       <div class="accordion"> <a class="dropdown" href="#">
-                          <object width="380" height="285"><param name="movie" value="https://www.youtube.com/watch?v=DN8VewdJL70"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://www.youtube.com/watch?v=DN8VewdJL70" type="application/x-shockwave-flash" width="380" height="285" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+                         <iframe width="250" height="188" src="https://www.youtube.com/embed/DN8VewdJL70" frameborder="0" allowfullscreen></iframe>
                       </a>
                         <div>  Project for a Masters Degree course, this centipede procedurally animates along any given mesh, featuring many user controls for varying animation parameters. </div>
                       </div>
