added another row of projects

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
       <p> A collection of my artistic work. </p>
       <section class="is-gallery">
     
+
+
+
+
+
+
+
+
+
+
           <!-- 1  ROW -->
 
         <div class="row">
@@ -110,6 +120,34 @@
                 
 
 
+
+   <!-- a ROW -->
+        <div class="row">
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/castle.jpg" target="_blank" type="image/png"><img type="image/png" src="images/castle.jpg" width="250" height="210"> </a>
+                <div> Procedural Castle Modeling tool for Houdini</div>
+              </div>
+            </div>
+          </div>
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/sunflowerField.jpg" target="_blank" type="image/jpg"> <img type="image/png" src="images/sunflowerField.jpg" width="250" height="220"> </a>
+                <div> Procedural Flower generator for Houdini. User can vary leaves, colors, quantities, shapes, phyllotaxis patterns</div>
+              </div>
+            </div>
+          </div>
+          <div class="4u">
+            <div>
+              <div class="accordion"> <a class="dropdown" href="#">
+                <a href = "images/VRpublicity_v1.jpg" target="_blank" type="image/png"><img type="image/png" src="images/VRpublicity_v1.jpg" width="250" height="170"> </a>
+                <div> Concept art for 4D cinema entertainment project at Victoria University </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
 
